--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ p {
   grid-template-columns: 1fr 1fr;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 #grid__tl__btn,
@@ -125,9 +126,9 @@ p {
 
 /* Top left corner */
 #grid__tl__btn {
-  transform: rotate(-45deg);
   top: -11.5rem;
   left: -11.5rem;
+  transform: rotate(-45deg);
 }
 #grid__tl__content {
   width: 30vw;
@@ -165,12 +166,65 @@ article p {
 .cards {
   padding: 0;
 }
-.card__content {
+.cards__content {
   display: flex;
   align-items: center;
 }
-.card__content__text {
+.cards__content__text {
   color: var(--text);
   text-align: left;
   margin: 0 1rem;
 }
+
+/* Top right corner */
+#grid__tr__btn {
+  top: -11.5rem;
+  right: -11.5rem;
+  transform: rotate(45deg);
+}
+
+#grid__tr__content {
+  width: 30vw;
+  top: 10vh;
+  right: 0;
+  /* transform: translateX(100vw) translateY(-100vh); */
+}
+
+.experience__skill {
+  display: flex;
+  flex-direction: column;
+  padding: 1.2rem;
+  margin: 0.5rem;
+  gap: 0.2rem;
+  width: fit-content;
+}
+
+.experience__skill div {
+  display: flex;
+  align-items: center;
+  width: 13.5rem;
+}
+
+.experience__skill div img {
+  padding: 0;
+  margin-right: 0.5rem;
+}
+
+.experience__skill div h2 {
+  text-align: left;
+}
+
+.experience__skill div p {
+  padding: 0;
+}
+
+.experience__skill div h2,
+.experience__skill div p {
+  font-size: 0.8rem;
+}
+
+.experience__skill div div {
+  justify-content: space-between;
+}
+
+/* BOTTOM LEFT CORNER */
