--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ p {
   grid-template-columns: 1fr 1fr;
   height: 100vh;
   width: 100vw;
+  /* any element offside of the grid will be hidden and cut off */
   overflow: hidden;
 }
 
@@ -125,6 +126,7 @@ p {
 }
 
 /* Top left corner */
+
 #grid__tl__btn {
   top: -11.5rem;
   left: -11.5rem;
@@ -187,14 +189,21 @@ article p {
   width: 30vw;
   top: 10vh;
   right: 0;
-  /* transform: translateX(100vw) translateY(-100vh); */
+  transform: translateX(100vw) translateY(-100vh);
+}
+
+.experience {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .experience__skill {
   display: flex;
   flex-direction: column;
   padding: 1.2rem;
-  margin: 0.5rem;
+  margin: 0;
   gap: 0.2rem;
   width: fit-content;
 }
@@ -228,3 +237,82 @@ article p {
 }
 
 /* BOTTOM LEFT CORNER */
+
+#grid__bl__btn {
+  bottom: -11.5rem;
+  left: -11.5rem;
+  transform: rotate(45deg);
+}
+
+#grid__bl__content {
+  width: 15rem;
+  bottom: 15vh;
+  left: 0;
+  transform: translateX(-100vw) translateY(100vh);
+}
+
+.project {
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 2rem;
+  overflow: hidden;
+  margin: auto auto 0.5rem;
+  border: var(--border);
+  background: var(--bg-alt);
+}
+
+.project__img {
+  width: 100%;
+}
+
+.project__title {
+  width: 100%;
+  margin: 0;
+  padding: 0.3rem 0;
+  font-size: 1rem;
+}
+
+button {
+  background: var(--btn);
+  color: var(--btn-text);
+  border: none;
+  border-radius: 1rem;
+  padding: 0.5rem;
+}
+
+.btn {
+  border-radius: 0;
+  height: 3rem;
+  flex-basis: 50%;
+  font-weight: 600;
+}
+
+.arrow {
+  border: var(--border);
+  width: 3rem;
+  height: 2rem;
+  margin: 0;
+  padding: 0.2rem 0;
+}
+
+.btn,
+.arrow {
+  background: rgb(245, 245, 245);
+  color: #333;
+  transition: all 300ms ease;
+}
+
+.btn:active,
+.arrow:active {
+  background: var(--bg-alt);
+  color: white;
+  cursor: pointer;
+}
+
+.btn:hover,
+.arrow:hover {
+  cursor: pointer;
+}
+
+/* BOTTOM RIGHT CORNER */
